<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".HomeActivity">
    <Button
            android:text="@string/beginner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/beginnerBtn" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.409"
            app:layout_constraintHorizontal_bias="0.503" android:fontFamily="sans-serif-black"
            android:textColor="@color/black" android:textSize="18sp" android:paddingLeft="15dp" android:paddingTop="15dp"
            android:paddingRight="15dp" android:paddingBottom="15dp"/>
    <Button
            android:text="@string/master"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/masterBtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/beginnerBtn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/creatorBtn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.504" android:textSize="18sp" android:fontFamily="sans-serif-black"
            android:textStyle="bold" android:paddingLeft="15dp" android:paddingTop="15dp" android:paddingRight="15dp"
            android:paddingBottom="15dp"/>
    <Button
            android:text="@string/creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/creatorBtn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/beginnerBtn" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.206" android:textSize="18sp" android:fontFamily="sans-serif-black"
            android:textStyle="bold" android:paddingLeft="15dp" android:paddingTop="15dp" android:paddingRight="15dp"
            android:paddingBottom="15dp"/>
</android.support.constraint.ConstraintLayout>